проект запускается, но очередь пустая

--- a/events_handler/Dockerfile
+++ b/events_handler/Dockerfile
@@ -14,6 +14,8 @@ RUN apk update \
 
 COPY . .
 
+ENV PYTHONPATH=/app
+
 RUN chmod +x /app/events_handler/entrypoint.sh
 
 CMD ["/bin/sh", "/app/events_handler/entrypoint.sh"]
