стоздал воркер, который загружает события в метрику

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ RABBITMQ_PASSWORD=guest
 RABBITMQ_EXCHANGE=metrika_exchange
 RABBITMQ_METRICS_QUEUE=metrics_queue
 RABBITMQ_METRICS_ROUTING_KEY=metrics.#
+
+OHMYAI_ROUTING_KEY=metrics.ohmyai
