запускает по крону

--- a/ohmyai_workshow_worker/Dockerfile
+++ b/ohmyai_workshow_worker/Dockerfile
@@ -10,10 +10,15 @@ COPY requirements.txt .
 RUN apk update \
     && apk add --no-cache build-base \
     && pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt
+    && pip install --no-cache-dir -r requirements.txt \
+    && apk add --no-cache dcron
 
 COPY . .
 
+# Добавляем задачу в cron
+RUN echo "0 * * * * /usr/local/bin/python /app/cron_runner.py >> /var/log/cron.log 2>&1" > /etc/crontabs/root
+
 ENV PYTHONPATH=/app
 
-CMD ["python", "worker.py"] 
+# Запускаем cron в фоновом режиме
+CMD ["crond", "-f", "-d", "8"] 
