--- a/ohmyai_workshow_worker/Dockerfile
+++ b/ohmyai_workshow_worker/Dockerfile
@@ -15,10 +15,21 @@ RUN apk update \
 
 COPY . .
 
+# Создаем директорию для логов
+RUN mkdir -p /var/log \
+    && touch /var/log/cron.log \
+    && chmod 0644 /var/log/cron.log
+
 # Добавляем задачу в cron
-RUN echo "0 * * * * /usr/local/bin/python /app/cron_runner.py >> /var/log/cron.log 2>&1" > /etc/crontabs/root
+RUN echo "0 * * * * /usr/local/bin/python /app/cron_runner.py >> /var/log/cron.log 2>&1" > /etc/crontabs/root \
+    && chmod 0644 /etc/crontabs/root
 
 ENV PYTHONPATH=/app
 
-# Запускаем cron в фоновом режиме
-CMD ["crond", "-f", "-d", "8"] 
+# Создаем скрипт для запуска
+RUN echo '#!/bin/sh' > /entrypoint.sh \
+    && echo 'crond -f -d 8' >> /entrypoint.sh \
+    && chmod +x /entrypoint.sh
+
+# Запускаем cron через entrypoint
+ENTRYPOINT ["/entrypoint.sh"] 
