--- a/ohmyai_workshow_worker/Dockerfile
+++ b/ohmyai_workshow_worker/Dockerfile
@@ -5,12 +5,11 @@ WORKDIR /app
 COPY requirements.txt .
 
 RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt \
-    && apk add --no-cache dcron
+    && pip install --no-cache-dir -r requirements.txt 
 
 COPY . .
 
 # Устанавливаем cron задачу из файла
 RUN crontab mycron
 
-CMD crond -f 
+CMD ["crond", "-f", "-l", "8"]
